kubernetes.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend-base-devops
spec:
  replicas: 2  # Ajustar el número de réplicas según sea necesario
  selector:
    matchLabels:
      app: backend-base-devops
  template:
    metadata:
      labels:
        app: backend-base-devops
    spec:
      containers:
      - name: backend-container
        image: localhost:8082/backend-base-devops:latest  # La imagen Docker desde Nexus
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend-base-devops
  ports:
    - protocol: TCP
      port: 80  # Puerto expuesto externamente
      targetPort: 3001  # Puerto donde escucha el contenedor
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: backend.base.devops
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
